# sellerclaw-agent

./: .dockerignore  .env  .env.local  .env.production  .env.staging  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile.admin-ui  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  conftest.py  docker-compose.eval.yml  docker-compose.yml  local-gateway-secrets.plan.md  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.server.txt  secrets.env.example  setup-live-watch.plan.md  setup.sh
.github/workflows/: build-image.yml
admin-ui/: .env.development  .env.production  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
admin-ui/src/: App.vue  main.ts  manifestTemplate.ts  style.css
agent_resources/partials/: api-access.md  degraded-operations.md  error-responses.md  mode-definitions.md  result-envelope.md  task-tracking.md
agent_resources/souls/: subagent.md  supervisor.md
docs/: README.md  cli.md  connection-protocol.md
docs/contracts/: agent-manifest-schema.json  agent-manifest.example.json  agent-manifest.md
docs/developer/: admin-ui.md
plugins/sellerclaw-ui/: index.ts  openclaw.plugin.json  package-lock.json  package.json  setup-entry.ts  tsconfig.json
plugins/sellerclaw-web-search/: index.ts  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
runtime/: Dockerfile  edge-requirements.txt  entrypoint-staging.sh  supervisord-staging.conf  supervisord.conf
runtime/commands/: fetch_config_bundle  gost_start  kasmvnc_start  openclaw_chrome  openclaw_diagnose_startup  openclaw_start
sellerclaw_agent/: __init__.py  assembly.py  async_backoff.py  cli.py  cli_watch.py  logging_setup.py  models.py  paths.py  registry.py  test_manifest_fixtures.py
tests/cloud/: __init__.py  (+17 more)
(+189 files in other folders)
